--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/twig-bundle"           : "^4.0",
         "twig/extensions"               : "^1.0",
         "twig/twig"                     : "~1.14,>=1.14.2|~2.0",
-        "phpdocumentor/reflection-docblock" : "^5"
+        "phpdocumentor/reflection-docblock" : ">=4.0.0|~5.0"
     },
     "require-dev": {
     },
