--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
     ],
     "require": {
         "php"                           : ">=7.1",
-        "symfony/dependency-injection"  : "~4.0",
-        "symfony/framework-bundle"      : "~4.0",
-        "symfony/twig-bridge"           : "~4.0",
-        "symfony/twig-bundle"           : "~4.0",
-        "twig/extensions"               : "~1.0",
-        "twig/twig"                     : "~1.14,>=1.14.2|~2.0"
+        "symfony/dependency-injection"  : "^4.0",
+        "symfony/framework-bundle"      : "^4.0",
+        "symfony/twig-bridge"           : "^4.0",
+        "symfony/twig-bundle"           : "^4.0",
+        "twig/extensions"               : "^1.0",
+        "twig/twig"                     : "~1.14,>=1.14.2|~2.0",
+        "phpdocumentor/reflection-docblock" : ">=4.0.0|~5.0"
     },
     "require-dev": {
     },
